Fix partial paths in settings.

--- a/views/dashboard/settings.ejs
+++ b/views/dashboard/settings.ejs
@@ -293,16 +293,16 @@
     <form action="/settings" method="post">
 
         <!-- Profile -->
-        <%- include('./partials/settings/profile.ejs') %>
+        <%- include('../partials/settings/profile.ejs') %>
 
         <!-- Ghost -->
-        <%- include('./partials/settings/ghost.ejs') %>
+        <%- include('../partials/settings/ghost.ejs') %>
 
         <!-- Customise -->
-        <%- include('./partials/settings/customise.ejs') %>
+        <%- include('../partials/settings/customise.ejs') %>
 
         <!-- Mails -->
-        <%- include('./partials/settings/mail.ejs') %>
+        <%- include('../partials/settings/mail.ejs') %>
 
         <div style="text-align: center; max-width: 50%; margin: auto;">
             <input type="submit" value="Save Changes" class="submit-button">
