--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -23,6 +23,47 @@
             line-height: 1.6em;
         }
 
+        .post-content-row img {
+            width: auto;
+            border: none;
+            height: auto;
+            margin: 0 auto;
+            display: block;
+            max-width: 100%;
+            border-radius: 5px;
+            -ms-interpolation-mode: bicubic;
+        }
+
+        .post-content-row blockquote {
+            font-size: 17px;
+            line-height: 1.6em;
+            margin: 2em 0 2em 0;
+            padding: 0 25px 0 25px;
+            font-weight: 500;
+            letter-spacing: -0.2px;
+            border-left: <%= site.color %> 2px solid;
+        }
+
+        .post-content-row hr {
+            position: relative;
+            display: block;
+            width: 100%;
+            margin: 3em 0;
+            padding: 0;
+            height: 1px;
+            border: 0;
+            border-top: 1px solid #e5eff5;
+        }
+
+        .post-content-row code {
+            font-size: 0.9em;
+            background: #F2F7FA;
+            word-break: break-all;
+            padding: 1px 7px;
+            border-radius: 3px;
+            color: <%= site.color %>;
+        }
+
         @media only screen and (max-width: 620px) {
             table.body {
                 width: 100%;
@@ -120,6 +161,33 @@
 
             table.body .feedback-button-mobile-text {
                 font-size: 13px !important;
+            }
+
+            table.body .latest-posts-header {
+                font-size: 12px !important;
+            }
+
+            table.body .latest-post-title {
+                display: inline-block !important;
+                width: 100%;
+                padding-right: 8px !important;
+            }
+
+            table.body .latest-post h4,
+            table.body .latest-post h4 span {
+                padding: 4px 0 6px !important;
+                font-size: 15px !important;
+            }
+
+            table.body .latest-post-excerpt,
+            table.body .latest-post-excerpt a,
+            table.body .latest-post-excerpt span {
+                font-size: 13px !important;
+                line-height: 1.2 !important;
+            }
+
+            table.body .latest-post-excerpt span {
+                display: none !important;
             }
 
             table.body .subscription-box h3 {
@@ -459,6 +527,69 @@
                         </tr>
                     <% } %>
 
+                    <!-- Keep Reading / Latest Posts -->
+                    <% if (post.latestPosts.length > 0) { %>
+                        <tr>
+                            <td style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; vertical-align: top; color: #15212A; padding: 24px 0; border-bottom: 1px solid #e5eff5;"
+                                valign="top">
+                                <h3 class="latest-posts-header"
+                                    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; line-height: 1.11em; text-rendering: optimizeLegibility; margin: 0; padding: 8px 0 16px; color: #15212A; font-size: 13px; font-weight: 700; text-transform: uppercase;">
+                                    Keep reading</h3>
+
+                                <% post.latestPosts.forEach(element => { %>
+                                    <table role="presentation" border="0" cellpadding="0" cellspacing="0"
+                                           style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; width: 100%;"
+                                           width="100%">
+                                        <tr>
+                                            <td class="latest-post"
+                                                style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; vertical-align: top; color: #15212A; padding: 8px 0;"
+                                                valign="top">
+
+                                                <table role="presentation" border="0" cellpadding="0" cellspacing="0"
+                                                       style="border-collapse: separate; mso-table-lspace: 0; mso-table-rspace: 0; width: 100%;"
+                                                       width="100%">
+                                                    <tr>
+                                                        <td valign="top" align="left" class="latest-post-title"
+                                                            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; vertical-align: top; color: #15212A; padding-right: 12px;">
+                                                            <h4 class
+                                                                style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-rendering: optimizeLegibility; line-height: 1.2em; margin: 0; padding: 2px 0 4px; font-size: 18px; font-weight: 700;">
+                                                                <a href="<%= element.url %>"
+                                                                   style="overflow-wrap: anywhere; text-decoration: none; color: #15212A;"
+                                                                   target="_blank"><%= element.title %></a>
+                                                            </h4>
+
+                                                            <p class="latest-post-excerpt"
+                                                               style="line-height: 1.6em; margin: 0; padding: 0; color: #738a94; font-size: 15px; font-weight: 400;">
+                                                                <a href="<%= element.url %>"
+                                                                   style="overflow-wrap: anywhere; text-decoration: none; color: #738a94;"
+                                                                   target="_blank"><%= `${element.preview.substring(0, 50)}...` %></a>
+                                                            </p>
+                                                        </td>
+
+                                                        <% if (element.featuredImage) { %>
+                                                            <td width="100" class="latest-post-img"
+                                                                style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; vertical-align: top; color: #15212A;"
+                                                                valign="top">
+                                                                <a href="<%= element.url %>"
+                                                                   style="overflow-wrap: anywhere; display: block; height: 100px; overflow: hidden; color: inherit; text-decoration: none;"
+                                                                   target="_blank">
+                                                                    <img src="<%= element.featuredImage %>"
+                                                                         width="100" height="100" loading="lazy"
+                                                                         style="border-radius: 5px; border: none; -ms-interpolation-mode: bicubic; max-width: 100%; object-fit: cover;"
+                                                                         alt>
+                                                                </a>
+                                                            </td>
+                                                        <% } %>
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                <% }); %>
+                            </td>
+                        </tr>
+                    <% } %>
+
                     <!-- Manage Subscription -->
                     <% if (show_subscription) { %>
                         <tr>
@@ -550,7 +681,8 @@
                                             <% if (show_powered_by_ghosler) { %> <a
                                                     href="https://github.com/itznotabug/ghosler"
                                                     style="color: #888; font-family: 'Arial Rounded MT Bold', serif; font-size: 14px; font-weight: 500; text-decoration: none; overflow-wrap: anywhere;"
-                                                    target="_blank">Newsletter delivered using <u>Ghosler️</u>
+                                                    target="_blank" rel="noopener noreferrer">Newsletter Powered by
+                                                <span style="color:<%= site.color %>;">Ghosler️</span>
                                             </a>
                                             <% } %>
                                         </td>
