--- a/views/partials/settings/customise.ejs
+++ b/views/partials/settings/customise.ejs
@@ -24,6 +24,14 @@
         </div>
 
         <div class="form-group-row ">
+            <label>Show Latest Posts</label>
+            <input type="checkbox" name="newsletter.show_latest_posts"
+            <% if (Boolean(configs.newsletter.show_latest_posts)) { %> checked
+                    <% } %>
+            >
+        </div>
+
+        <div class="form-group-row ">
             <label>Show Subscription</label>
             <input type="checkbox" name="newsletter.show_subscription"
             <% if (Boolean(configs.newsletter.show_subscription)) { %> checked
