--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -64,6 +64,72 @@
             color: <%= site.color %>;
         }
 
+        .kg-callout-card {
+            display: flex;
+            margin: 0 0 1.5em 0;
+            padding: 20px 28px;
+            border-radius: 12px;
+        }
+
+        .kg-callout-card p {
+            margin: 0
+        }
+
+        .kg-callout-text {
+            color: #15212A;
+        }
+
+        .kg-callout-card-grey {
+            background: #eef0f2;
+        }
+
+        .kg-callout-card-white {
+            background: #fff;
+            box-shadow: inset 0 0 0 1px #dddedf;
+        }
+
+        .kg-callout-card-blue {
+            background: #E9F6FB;
+        }
+
+        .kg-callout-card-green {
+            background: #E8F8EA;
+        }
+
+        .kg-callout-card-yellow {
+            background: #FCF4E3;
+        }
+
+        .kg-callout-card-red {
+            background: #FBE9E9;
+        }
+
+        .kg-callout-card-pink {
+            background: #FCEEF8;
+        }
+
+        .kg-callout-card-purple {
+            background: #F2EDFC;
+        }
+
+        .kg-callout-card-accent {
+            background: <%= site.color %>;
+        }
+
+        .kg-callout-emoji {
+            padding-right: 12px;
+            font-size: 20px;
+        }
+
+        .kg-callout-text {
+            color: #15212A;
+        }
+
+        .kg-callout-card-accent a,
+        .kg-callout-card-accent .kg-callout-text {
+            color: #fff;
+        }
+
         @media only screen and (max-width: 620px) {
             table.body {
                 width: 100%;
@@ -339,7 +405,7 @@
                                                         style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; vertical-align: top; color: #15212A; padding-bottom: 10px; padding-top: 20px; text-align: center; border-radius: 3px;"
                                                         valign="top">
                                                         <a href="<%= site.url %>"
-                                                           style="color: <%= site.color %>>; text-decoration: none; overflow-wrap: anywhere;"
+                                                           style="color: <%= site.color %>; text-decoration: none; overflow-wrap: anywhere;"
                                                            target="_blank">
                                                             <img src="<%= site.logo %>" alt="<%= site.title %>"
                                                                  border="0" height="48" width="48"
