--- a/views/dashboard/settings.ejs
+++ b/views/dashboard/settings.ejs
@@ -230,7 +230,7 @@
         <div id="mailConfigInner${mailConfigIndex}" style="display: none;">
             <div class="form-group">
                 <label>Reply To</label>
-                <input type="email" placeholder="Optional" name="email[${mailConfigIndex}][reply_to]" />
+                <input type="email" placeholder="'Author' <author@ghost.org> [Optional]" name="email[${mailConfigIndex}][reply_to]" />
             </div>
             <div class="form-group">
                 <label>From</label>
