--- a/views/partials/settings/mail.ejs
+++ b/views/partials/settings/mail.ejs
@@ -18,7 +18,8 @@
                     <div id="mailConfigInner<%= index; %>" style="display: none;">
                         <div class="form-group">
                             <label>Reply To</label>
-                            <input type="email" placeholder="Optional" name="email[<%= index; %>][reply_to]"
+                            <input type="text" placeholder="'Author' <author@ghost.org> [Optional]"
+                                   name="email[<%= index; %>][reply_to]"
                                    value="<%= config.reply_to; %>"/>
                         </div>
                         <div class="form-group">
