--- a/views/partials/settings/customise.ejs
+++ b/views/partials/settings/customise.ejs
@@ -7,7 +7,7 @@
     </div>
 
     <div id="newsletterSettings" style="display: none;">
-        <div class="form-group-row ">
+        <div class="form-group-row">
             <label>Center Title</label>
             <input type="checkbox" name="newsletter.center_title"
             <% if (Boolean(configs.newsletter.center_title)) { %> checked
@@ -15,7 +15,21 @@
             >
         </div>
 
-        <div class="form-group-row ">
+        <div class="form-group-row">
+            <label>Track URL Clicks
+                <span style="font-weight: normal; font-size: 12px; color: #738a94">
+                    <!-- Linking a future PR, hehe. -->
+                    (<a href="https://github.com/itznotabug/ghosler/pull/7" target="_blank"
+                        style="text-decoration: none; color: dodgerblue">See</a> what URLs are tracked)
+                </span>
+            </label>
+            <input type="checkbox" name="newsletter.track_links"
+            <% if (Boolean(configs.newsletter.track_links)) { %> checked
+                    <% } %>
+            >
+        </div>
+
+        <div class="form-group-row">
             <label>Show Comments</label>
             <input type="checkbox" name="newsletter.show_comments"
             <% if (Boolean(configs.newsletter.show_comments)) { %> checked
@@ -23,7 +37,7 @@
             >
         </div>
 
-        <div class="form-group-row ">
+        <div class="form-group-row">
             <label>Show Latest Posts</label>
             <input type="checkbox" name="newsletter.show_latest_posts"
             <% if (Boolean(configs.newsletter.show_latest_posts)) { %> checked
@@ -31,7 +45,7 @@
             >
         </div>
 
-        <div class="form-group-row ">
+        <div class="form-group-row">
             <label>Show Subscription</label>
             <input type="checkbox" name="newsletter.show_subscription"
             <% if (Boolean(configs.newsletter.show_subscription)) { %> checked
@@ -39,7 +53,7 @@
             >
         </div>
 
-        <div class="form-group-row ">
+        <div class="form-group-row">
             <label>Show Featured Image</label>
             <input type="checkbox" name="newsletter.show_featured_image"
             <% if (Boolean(configs.newsletter.show_featured_image)) { %> checked
@@ -47,7 +61,7 @@
             >
         </div>
 
-        <div class="form-group-row ">
+        <div class="form-group-row">
             <label>Show 'Powered by Ghost'</label>
             <input type="checkbox" name="newsletter.show_powered_by_ghost"
             <% if (Boolean(configs.newsletter.show_powered_by_ghost)) { %> checked
