--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -769,20 +769,21 @@
                                         <td align="center"
                                             style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; vertical-align: top; color: #15212A; text-align: center; padding-top: 70px; padding-bottom: 40px;"
                                             valign="top">
-                                            <% if (show_powered_by_ghost) { %> <a href="https://ghost.org/"
-                                                                                  style="color: <%= site.color %>; text-decoration: none; overflow-wrap: anywhere;"
-                                                                                  target="_blank">
-                                                <img alt="Powered by Ghost" border="0" height="30"
-                                                     src="https://static.ghost.org/v4.0.0/images/powered.png"
-                                                     style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; width: 142px; height: 30px;"
-                                                     width="142">
-                                            </a>
+                                            <% if (show_powered_by_ghost) { %>
+                                                <a href="https://ghost.org/"
+                                                   style="color: <%= site.color %>; text-decoration: none; overflow-wrap: anywhere;"
+                                                   target="_blank">
+                                                    <img alt="Powered by Ghost" border="0" height="30"
+                                                         src="https://static.ghost.org/v4.0.0/images/powered.png"
+                                                         style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%; width: 142px; height: 30px;"
+                                                         width="142">
+                                                </a>
                                             <% } %>
                                             <% if (show_powered_by_ghost && show_powered_by_ghosler) { %> <p></p>
                                             <% } %>
                                             <% if (show_powered_by_ghosler) { %> <a
                                                     href="https://github.com/itznotabug/ghosler"
-                                                    style="color: #888; font-family: 'Arial Rounded MT Bold', serif; font-size: 14px; font-weight: 500; text-decoration: none; overflow-wrap: anywhere;"
+                                                    style="color: #1E2023; font-family: 'Arial Rounded MT Bold', serif; font-size: 12px; font-weight: 500; text-decoration: none; overflow-wrap: anywhere;"
                                                     target="_blank" rel="noopener noreferrer">Newsletter Powered by
                                                 <span style="color:<%= site.color %>;">Ghosler️</span>
                                             </a>
