--- a/views/dashboard/analytics.ejs
+++ b/views/dashboard/analytics.ejs
@@ -245,7 +245,9 @@
                     </td>
                     <td data-title="Newsletter Status"><%= element.stats.newsletterStatus; %></td>
                     <td data-title="Action">
-                        <% if (element.stats.postContentTrackedLinks.length > 0) { %>
+                        <% if (typeof element.stats.postContentTrackedLinks !== 'undefined'
+                                && element.stats.postContentTrackedLinks
+                                && element.stats.postContentTrackedLinks.length > 0) { %>
                             <button type="button"
                                     style="color: white; background-color: darkgreen; border-radius: 6px; padding: 10px; border: none; cursor: pointer; margin-right: 8px;"
                                     onclick="window.location='/analytics/links/<%= element.id %>'"
