Improve the info. message.

--- a/views/dashboard/links.ejs
+++ b/views/dashboard/links.ejs
@@ -159,7 +159,7 @@
     <h2 style="text-align: center; color: #666; margin: 25px;">No links available for this post!</h2>
 <% } else { %>
     <p style="text-align: center; color: #666; margin: 25px; line-height: 1.5">
-        <strong>Clicks are tracked & incremented<br>everytime they are clicked.</strong>
+        <strong>URLs are tracked and incremented<br>every time they are clicked.</strong>
     </p>
 
     <div class="table-container">
