Allow using display name in the newly created `Reply To` input.

--- a/views/dashboard/settings.ejs
+++ b/views/dashboard/settings.ejs
@@ -248,7 +248,7 @@
         <div id="mailConfigInner${mailConfigIndex}" style="display: none;">
             <div class="form-group">
                 <label>Reply To</label>
-                <input type="email" placeholder="'Author' <author@ghost.org> [Optional]" name="email[${mailConfigIndex}][reply_to]" />
+                <input type="text" placeholder="'Author' <author@ghost.org> [Optional]" name="email[${mailConfigIndex}][reply_to]" />
             </div>
             <div class="form-group">
                 <label>From</label>
